--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.2.0"
 edition = "2021"
 
 [dependencies]
+async-trait = "0.1.77"
 axum = { version = "0.7.4", features = ["macros", "http2"] }
 clap = { version = "4.5.1", features = ["derive"] }
 is-root = "0.1.3"
@@ -18,9 +19,3 @@ toml = "0.8.10"
 
 [target.'cfg(windows)'.dependencies]
 windirs = "1.0.1"
-
-[features]
-default = ["ffmpeg", "mediainfo"]
-
-mediainfo = []
-ffmpeg = []
