--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "radio"
-version = "0.6.0"
+version = "0.7.0"
 edition = "2021"
 
 [dependencies]
 async-trait = "0.1.77"
 axum = { version = "0.7.4", features = ["macros", "http2"] }
 clap = { version = "4.5.1", features = ["derive"] }
+futures-core = "0.3.30"
 is-root = "0.1.3"
 jwalk = "0.8.1"
 rand = "0.8.5"
