--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,18 +5,21 @@ edition = "2021"
 
 [dependencies]
 async-trait = "0.1.77"
-axum = { version = "0.7.4", features = ["macros", "http2"] }
+axum = { version = "0.7.4", features = ["macros", "http2", "ws"] }
 clap = { version = "4.5.1", features = ["derive"] }
 futures-core = "0.3.30"
 is-root = "0.1.3"
 jwalk = "0.8.1"
+mime_guess = "2.0.4"
 rand = "0.8.5"
 rayon = "1.9.0"
+rust-embed = { version = "8.3.0", features = ["axum"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 tokio = { version = "1.36.0", features = ["full"] }
 tokio-stream = { version = "0.1.14", features = ["full"] }
 toml = "0.8.10"
+tower-http = { version = "0.5.2", features = ["cors"] }
 
 [target.'cfg(windows)'.dependencies]
 windirs = "1.0.1"
