--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "radio"
-version = "0.10.0"
+version = "0.11.0"
 edition = "2021"
 
 [dependencies]
@@ -13,7 +13,7 @@ jwalk = "0.8.1"
 mime_guess = "2.0.4"
 rand = "0.8.5"
 rayon = "1.9.0"
-rust-embed = { version = "8.3.0", features = ["axum"] }
+rust-embed = { version = "8.3.0", features = ["axum"], optional = true }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 tokio = { version = "1.36.0", features = ["full"] }
@@ -23,3 +23,7 @@ tower-http = { version = "0.5.2", features = ["cors"] }
 
 [target.'cfg(windows)'.dependencies]
 windirs = "1.0.1"
+
+[features]
+default = ["webapp"]
+webapp = ["dep:rust-embed"]
