--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,11 @@ edition = "2021"
 
 [dependencies]
 async-trait = "0.1.77"
-axum = { version = "0.7.4", features = ["macros", "http2", "ws"] }
+axum = { version = "0.7.4", features = [
+	"macros",
+	"ws",
+	"http1",
+], default-features = false }
 clap = { version = "4.5.1", features = ["derive"] }
 futures-core = "0.3.30"
 is-root = "0.1.3"
@@ -15,9 +19,12 @@ rand = "0.8.5"
 rayon = "1.9.0"
 rust-embed = { version = "8.3.0", features = ["axum"], optional = true }
 serde = { version = "1.0.197", features = ["derive"] }
+serde-aux = { version = "4.5.0", default-features = false }
 serde_json = "1.0.114"
-tokio = { version = "1.36.0", features = ["full"] }
-tokio-stream = { version = "0.1.14", features = ["full"] }
+tokio = { version = "1.36.0", features = ["rt-multi-thread", "process"] }
+tokio-stream = { version = "0.1.14", default-features = false, features = [
+	"sync",
+] }
 toml = "0.8.10"
 tower-http = { version = "0.5.2", features = ["cors"] }
 
@@ -27,3 +34,4 @@ windirs = "1.0.1"
 [features]
 default = ["webapp"]
 webapp = ["dep:rust-embed"]
+h2 = ["axum/http2"]
