--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ axum = { version = "0.7.4", features = [
 	"macros",
 	"ws",
 	"http1",
+	"query",
 ], default-features = false }
 clap = { version = "4.5.1", features = ["derive"] }
 futures-core = "0.3.30"
